--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2flYGLJlYf8eYd7ZPbS7E0UQEWXpNcBHMhKQjOylavTgLUXRuJBgf2YFEfSoF3eT08ruOELYfLHYRyNvVLIcsQ9ifMvw/Yxk8QpT14jfqbxqR9/AhHO8gaTD3G/mnYhb.1+uxvMpxKB/fC65FQfP9f7PSk5VbEeHaMfcOOcMyO278LUdIdBbzQ/MqYQ5rU8NfgZHdyb6DfeqLsB9uXeXAmVHfdlvv5T163zzQsRtMUZMJWRBMOQfmaL8lciMrJ01J">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RdstpQPpP0Gecu0Vx9CtyJoLOp9As9Y6Wc/PJJFHTvI9GWvLxCC22xUID39C3A9JM6jUTeJ1LV1dep1o9h/NOTxULj4P/0ecACnkVUnsP3qvg6XQH5ny8Go3Ol5KCS0r.e00/B1xsm4rFcsOLXcLBGMSB7k6Cp7Lfx8ZGMuWF/VH2s5bPfTWSH3QpJ8UjXAKNLR77CBjXvl0m/maeF5XK/gy67tpcolfsifN2CRSj9GKirAbg0ACP9SvIDxdTOfNW">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
