--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="r6R+bfnhMKP7EnOpGB9KibjDji4OcPkhdA9cBO37X0D7I75p4KZT3OrHmqcmZrjGc+ZoHo5qfM8Azjst2FaVikDpHRuHVVSAVUxw0eeGdUwGkCF6LvFc1hSpSltNQs30.p/UVbziYFwMAglE6HhazLf+HDmbAXNULVvQ6/ZDvjdtfiASQMCRxqJbUP6Jcy4W+SBXPPv7NLUPClSbFz7MqJUzxj19k0fdM+HAEokUfaY8/ciE1kSKfJZ0UexZ24Oz2">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="6ugVGGz7hbmVSswsKaZJhcIiJPNQbtmQqflwnpErt56cwfRcjZpvKE1cCmZYPfEyNEt/AFaGTbkyMhejGdvyrbu3XljGDDcghyjKkMXXFwJ0xh6R6yhFl9nvmOlvbBlF.Ptf5ROdweW5Dl+3YvCxEXCPgTopnd/Fom+vARHH/swgSUuYZFtpEWDEZrbyjrrLlCXNCcyQR1yHzigbLcpt/KNlTH1UgWd1ZJxOxSJAPtEo3VP1IDDGzSB+5sC78dHxy">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
