--- a/JobAdd.html
+++ b/JobAdd.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RTUJEnqol9Tlxvx0htkPsmVFTp8QQGzWO4DLVWPrIcClI6O/BCz562BmG7THO1SBN1AQvQQR0hqPMFmUQt1yJsP1yA0DnybgIF4LSh8iD9kuRCPFM+9ugGIxbmiEKwu2.EJN/oMh/52oShf/J7i3LydvYuvRjSnL9qL8EOtSTWrqyBbWGHxONthAbgRczC4r+D+YsvKOPVNrS1pTp3ej41IqyiXrVQZ4LsEEkkSSpMVhB0XO/Xf+ztvYVEseZA/Bv">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="F7NetCaADoazqJP19j3J+04+y8poEF4JR+AfZPghgGdzR4rqZxrSloXnG0ICYcGQLlDbwSB6qA2HQZluMcJrD/L+TCDs6A5eopV7tS+B3jbKekmEgZrJlzbQbei/mqPr.3P8NYvCtq+zEjnpp7MDtUqNS+MzTGwWyzxTTgnletwsAi0f+PMB81zqgC6XwZwTS19b3mACg/VC99Q/WcV+CqqhnlDEr8RhuaRs2J13u036MnKHa7bZkFx3qyY4aAJoP">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
