--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
