--- a/JobAdd.html
+++ b/JobAdd.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="CSf6cyIZcxzXz0dsyT5nDm2PfkRmV4UueClGWDM44knizZE/+mPcwEaM8Cu1IiFMVoSB2UC8jzqev2ieZAbVpj0EdxTY4f9nut7+HvGntZ0XI1n1vzgsUA6Mtqc3ukJM.bls2VNYYNgI27F9rWmihLF2C+TXdMv4yXH4yo4ens7h6vF/uHQsfJuUXrdKnJc0JE5LeFHKCUj5oKeY13FA80e3y8YgFeg6J4/ugCj2D0JbB0JEDlMemeQfuhlmW9V2Q">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="f0DT/m+F/61wzzdxZKRZVkztw4RZIeVgGiNKKnLUEHkkKMllZmudNOsJXWaVvT83MKTyRftH/zw6ySYDryeQudmE+50ImiTxztRMG7vwn40qaK2QToqaJ93Mn810cAMt.hGJuCVYs4r3ypuou+jNn0wOI2C4hYmashOGswJc5U2g54LGXz0aw4F/Au5i5dGBnAQGWGOPYw8rb4Y0wbyB7G1Xecv8I4EYgFBhnZ8X25sClAxvOFzy895OLGKZHT6ID">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
