--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
