--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="EiQY9nGuJAI7RiAINkJdCNoJvaf7JSzcEd8I1a+SlqbZMBY7zt6XwClkigL+gswS7BGRvNmbQvknzrGVPwW2517/4F6FlBkmDMZ3tBFE8LFI2iWxGO9Z/U737tOQQ190.yVBBSs8tjDutsCc1Hs0xQuIf0+pzw7wKJlbQqsPOoAWQYpjWBhzasEEOGq/HyoayUGDly10zSR+I8O+jACsMlWkN3V9sscct43LhkTEP+g077IQ/Yw+8GdiIE+i0MqIm">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rrVXHn79K+UMuXP6C2/odF9yYOXtY/6Ql50q/46gK0Hhc/9SrsmPnTlv8lUWv2nE++4Ypt3xbTYMQdKNLIf9vW+vGk2p7tSp0zOFNtpwvbmCZFp3A8dPas9yODipNQ04.ojZMSc1zaQsuMLI+SXUdXfocJXjOOikt5jcJsCugOMd1LTRKouWCaetdbT2t4l/BHtn009o/tdvMpUkXMnK1qzfV7iyYDekYbokPrvQGbV9A+cCZVTbzY4heu3vMdvu4">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
