--- a/tools.html
+++ b/tools.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
+<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
 
     
 
@@ -134,7 +134,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background16.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background116.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>LMIS Map</strong></h4>
@@ -149,7 +149,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background27.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background217.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
@@ -164,7 +164,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background38.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background318.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Surveies</strong></h4>
@@ -179,7 +179,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background49.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background419.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
